[package]
name = "fuzzier"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.14.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
embed_anything = "0.6.7"
candle-core = "=0.9.1"
vecstore = "1.0.0"
walkdir = "2.5.0"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch.crates-io]
iced = { git = "https://github.com/squidowl/iced", rev = "fcfa87cb35b615715919c8b4da408b6488f195de", features=["debug","tokio"] }
